--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,7 @@
     <string name="single_digit">0</string>
     <string name="verify_otp"><![CDATA[Verify OTP]]></string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="title_activity_home">home</string>
+    <string name="title_activity_home">Home</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">Android Studio</string>
